style: fix alignment for Header items

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -13,10 +13,18 @@
 
 .row {
   padding-top: 20px;
+  border: 1px solid blue;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  border: 1px solid red;
 }
 
 .timeline {
   display: flex;
+  border: 1px solid red;
   justify-content: flex-start;
 }
 
